--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,200;0,400;0,500;0,700;0,900;1,200;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-  margin: 0;
-  font-family: 'Grandstander', cursive;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: 'Grandstander', cursive;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+@keyframes falling-animation {
+    from {
+        transform: translateY(calc(100% - 400px));
+    }
+    to {
+        transform: translateY(0);
+    }
 }
