--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,128 @@ code {
         transform: rotate(1turn);
     }
 }
+
+@keyframes animate-image {
+    0% {
+        opacity: 0;
+    }
+
+    10% {
+        opacity: 1;
+    }
+
+    25% {
+        opacity: 1;
+    }
+
+    35% {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+@keyframes animate-point1 {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    10% {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    65% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
+
+@keyframes animate-point2 {
+    0% {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+
+    10% {
+        opacity: 1;
+        transform: rotate(-20deg);
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0;
+        transform: rotate(-90deg);
+    }
+
+    to {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes animate-point6 {
+    0% {
+        opacity: 0;
+        transform: rotate(-20deg);
+    }
+
+    10% {
+        opacity: 1;
+        transform: rotate(-20deg);
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0;
+        transform: rotate(-110deg);
+    }
+
+    to {
+        opacity: 0;
+        transform: rotate(-20deg);
+    }
+}
+
+@keyframes animate-point8 {
+    0% {
+        opacity: 0;
+        transform: rotate(-90deg);
+    }
+
+    10% {
+        opacity: 1;
+        transform: rotate(-90deg);
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0;
+        transform: rotate(-180deg);
+    }
+
+    to {
+        opacity: 0;
+        transform: rotate(-90deg);
+    }
+}
